--- a/src/index.html
+++ b/src/index.html
@@ -121,8 +121,8 @@
                 </div>
             </div>
         </div>
-        <section class="start container" id="how-it-works">
-            <h2 class="start__heading title">
+        <section class="start container">
+            <h2 class="start__heading title" id="how-it-works">
                 Easy start
             </h2>
             <div class="start__body">
@@ -417,9 +417,9 @@
                 </div>
             </div>
         </section>
-        <section class="benefits container container--wide" id="benefits">
+        <section class="benefits container container--wide">
             <div class="benefits__navigation">
-                <h2 class="benefits__heading title">
+                <h2 class="benefits__heading title" id="benefits">
                     Benefits&nbsp;for
                 </h2>
                 <div class="benefits__tabs">
@@ -472,8 +472,8 @@
                 </div>
             </div>
         </section>
-        <section class="numbers container container--wide" id="numbers">
-            <h2 class="numbers__heading title">
+        <section class="numbers container container--wide">
+            <h2 class="numbers__heading title" id="numbers">
                 Quotalogic in&nbsp;numbers
             </h2>
             <div class="numbers__summary">
@@ -558,8 +558,8 @@
                 </div>
             </div>
         </section>
-        <section class="basics container container--wide" id="basics">
-            <h2 class="basics__heading title">
+        <section class="basics container container--wide">
+            <h2 class="basics__heading title" id="basics">
                 Our basics
             </h2>
             <div class="basics__description">
@@ -689,13 +689,13 @@
                 </div>
             </div>
         </section>
-        <section class="tariffs container container--wide" id="tariffs">
+        <section class="tariffs container container--wide">
             <h2 class="visuallyhidden">Tariffs</h2>
             <table class="tariffs__table">
                 <thead class="tariffs__section tariffs__section--head">
                     <tr class="tariffs__row">
                         <th class="tariffs__cell">
-                            <div class="tariffs__heading title">Tariffs<span class="desktop-only">:</span></div>
+                            <div class="tariffs__heading title" id="tariffs">Tariffs<span class="desktop-only">:</span></div>
                         </th>
                         <th class="tariffs__cell">
                             <div class="plan">
@@ -1021,11 +1021,11 @@
                 </div>
             </div>
         </section>
-        <footer class="footer" id="contacts">
+        <footer class="footer">
             <div class="footer__wrap container container--wide">
                 <div class="footer__primary">
                     <div class="footer__summary">
-                        <b class="footer__heading title">
+                        <b class="footer__heading title" id="contacts">
                             Let’s stay connected
                         </b>
                         <div class="footer__slogan">
