--- a/src/index.html
+++ b/src/index.html
@@ -364,13 +364,16 @@
                         </div>
                     </div>
                     <div class="sales__preview">
-                        <img class="sales__illustration"
-                             srcset="content/sales@2x.png 2x"
-                             src="content/sales.png"
-                             width="702"
-                             height="678"
-                             alt=""
-                        >
+                        <picture>
+                            <source srcset="content/sales@2x.avif @2x, content/sales.avif" type="image/avif"/>
+                            <img class="sales__illustration"
+                                 srcset="content/sales@2x.png 2x"
+                                 src="content/sales.png"
+                                 width="702"
+                                 height="678"
+                                 alt=""
+                            >
+                        </picture>
                     </div>
                 </div>
             </div>
