--- a/src/index.html
+++ b/src/index.html
@@ -365,9 +365,9 @@
                     </div>
                     <div class="sales__preview">
                         <picture>
-                            <source srcset="content/sales@2x.avif @2x, content/sales.avif" type="image/avif"/>
-                            <source srcset="content/sales@2x.webp @2x, content/sales.webp" type="image/webp"/>
-                            <img class="sales__illustration" srcset="content/sales@2x.png 2x" src="content/sales.png" width="702" height="678" alt="">
+                            <source srcset="content/sales/sales@2x.avif @2x, content/sales/sales.avif" type="image/avif"/>
+                            <source srcset="content/sales/sales@2x.webp @2x, content/sales/sales.webp" type="image/webp"/>
+                            <img class="sales__illustration" srcset="content/sales/sales@2x.png 2x" src="content/sales/sales.png" width="702" height="678" alt="">
                         </picture>
                     </div>
                 </div>
