--- a/src/index.html
+++ b/src/index.html
@@ -365,8 +365,8 @@
                     </div>
                     <div class="sales__preview">
                         <picture>
-                            <source srcset="content/sales@2x.avif @2x, content/sales.avif" type="image/avif"/>
-                            <source srcset="content/sales@2x.webp @2x, content/sales.webp" type="image/webp"/>
+                            <source srcset="content/sales@2x.avif 2x, content/sales.avif" type="image/avif"/>
+                            <source srcset="content/sales@2x.webp 2x, content/sales.webp" type="image/webp"/>
                             <img class="sales__illustration" srcset="content/sales@2x.png 2x" src="content/sales.png" width="702" height="678" alt="">
                         </picture>
                     </div>
@@ -459,13 +459,11 @@
                                 <li class="list__item">Effortlessly distribute many suppliers products to sub-dealers, bypassing content management.</li>
                             </ul>
                         </div>
-                        <img class="benefits__screenshot"
-                             srcset="content/benefits-screenshot-b@2x.png 2x"
-                             src="content/benefits-screenshot-b.png"
-                             width="622"
-                             height="466"
-                             alt=""
-                        >
+                        <picture>
+                            <source srcset="content/benefits-screenshot-b@2x.avif 2x, content/benefits-screenshot-b.avif" type="image/avif"/>
+                            <source srcset="content/benefits-screenshot-b@2x.webp 2x, content/benefits-screenshot-b.webp" type="image/webp"/>
+                            <img srcset="content/benefits-screenshot-b@2x.png 2x" src="content/benefits-screenshot-b.png" width="622" height="466" alt="">
+                        </picture>
                     </div>
                 </div>
             </div>
