--- a/src/index.html
+++ b/src/index.html
@@ -438,13 +438,10 @@
                                 <li class="list__item">Support dealers with effective enterprise sales tools they can't launch themselves.</li>
                             </ul>
                         </div>
-                        <img class="benefits__screenshot"
-                             srcset="content/benefits-screenshot-a@2x.jpg 2x"
-                             src="content/benefits-screenshot-a.jpg"
-                             width="622"
-                             height="466"
-                             alt=""
-                        >
+                        <picture>
+                            <source srcset="content/benefits-screenshot-a@2x.avif 2x, content/benefits-screenshot-a.avif" type="image/avif"/>
+                            <img class="benefits__screenshot" srcset="content/benefits-screenshot-a@2x.jpg 2x" src="content/benefits-screenshot-a.jpg" width="622" height="466" alt="">
+                        </picture>
                     </div>
                 </div>
                 <div class="benefits__item benefits__item--for-dealer-and-seller">
