--- a/src/index.html
+++ b/src/index.html
@@ -459,7 +459,7 @@
                         <picture>
                             <source srcset="content/benefits-screenshot-b@2x.avif 2x, content/benefits-screenshot-b.avif" type="image/avif"/>
                             <source srcset="content/benefits-screenshot-b@2x.webp 2x, content/benefits-screenshot-b.webp" type="image/webp"/>
-                            <img srcset="content/benefits-screenshot-b@2x.png 2x" src="content/benefits-screenshot-b.png" width="622" height="466" alt="">
+                            <img class="benefits__screenshot" srcset="content/benefits-screenshot-b@2x.png 2x" src="content/benefits-screenshot-b.png" width="622" height="466" alt="">
                         </picture>
                     </div>
                 </div>
