cta screenshots avif

--- a/src/index.html
+++ b/src/index.html
@@ -386,31 +386,40 @@
                 </div>
                 <div class="cta__preview">
                     <div class="cta__thumb"><!-- может быть некликабельным дивом -->
-                        <img class="cta__screenshot animation animation--slide animation--order-1"
-                             srcset="temp/cta-screenshot-secondary-a@2x.jpg 2x"
-                             src="temp/cta-screenshot-secondary-a.jpg"
-                             width="486"
-                             height="356"
-                             alt=""
-                        >
+                        <picture>
+                            <source srcset="content/cta-screenshot-secondary-a@2x.avif 2x, content/cta-screenshot-secondary-a.avif" type="image/avif">
+                            <img class="cta__screenshot animation animation--slide animation--order-1"
+                                 srcset="content/cta-screenshot-secondary-a@2x.jpg 2x"
+                                 src="content/cta-screenshot-secondary-a.jpg"
+                                 width="486"
+                                 height="356"
+                                 alt=""
+                            >
+                        </picture>
                     </div>
                     <div class="cta__thumb cta__thumb--primary"><!-- может быть некликабельным дивом -->
-                        <img class="cta__screenshot animation animation--slide animation--order-2"
-                             srcset="temp/cta-screenshot-primary@2x.jpg 2x"
-                             src="temp/cta-screenshot-primary.jpg"
-                             width="584"
-                             height="428"
-                             alt=""
-                        >
+                        <picture>
+                            <source srcset="content/cta-screenshot-primary@2x.avif 2x, content/cta-screenshot-primary.avif" type="image/avif">
+                            <img class="cta__screenshot animation animation--slide animation--order-2"
+                                 srcset="content/cta-screenshot-primary@2x.jpg 2x"
+                                 src="content/cta-screenshot-primary.jpg"
+                                 width="584"
+                                 height="428"
+                                 alt=""
+                            >
+                        </picture>
                     </div>
                     <div class="cta__thumb"><!-- может быть некликабельным дивом -->
-                        <img class="cta__screenshot animation animation--slide animation--order-3"
-                             srcset="temp/cta-screenshot-secondary-b@2x.jpg 2x"
-                             src="temp/cta-screenshot-secondary-b.jpg"
-                             width="486"
-                             height="356"
-                             alt=""
-                        >
+                        <picture>
+                            <source srcset="content/cta-screenshot-secondary-b@2x.avif 2x, content/cta-screenshot-secondary-b.avif" type="image/avif">
+                            <img class="cta__screenshot animation animation--slide animation--order-3"
+                                 srcset="content/cta-screenshot-secondary-b@2x.jpg 2x"
+                                 src="content/cta-screenshot-secondary-b.jpg"
+                                 width="486"
+                                 height="356"
+                                 alt=""
+                            >
+                        </picture>
                     </div>
                 </div>
             </div>
