feature meaning avif

--- a/src/index.html
+++ b/src/index.html
@@ -365,8 +365,8 @@
                     </div>
                     <div class="sales__preview">
                         <picture>
-                            <source srcset="content/sales@2x.avif 2x, content/sales.avif" type="image/avif"/>
-                            <source srcset="content/sales@2x.webp 2x, content/sales.webp" type="image/webp"/>
+                            <source srcset="content/sales@2x.avif 2x, content/sales.avif" type="image/avif">
+                            <source srcset="content/sales@2x.webp 2x, content/sales.webp" type="image/webp">
                             <img class="sales__illustration" srcset="content/sales@2x.png 2x" src="content/sales.png" width="702" height="678" alt="">
                         </picture>
                     </div>
@@ -448,7 +448,7 @@
                             </ul>
                         </div>
                         <picture>
-                            <source srcset="content/benefits-screenshot-a@2x.avif 2x, content/benefits-screenshot-a.avif" type="image/avif"/>
+                            <source srcset="content/benefits-screenshot-a@2x.avif 2x, content/benefits-screenshot-a.avif" type="image/avif">
                             <img class="benefits__screenshot" srcset="content/benefits-screenshot-a@2x.jpg 2x" src="content/benefits-screenshot-a.jpg" width="622" height="466" alt="">
                         </picture>
                     </div>
@@ -466,8 +466,8 @@
                             </ul>
                         </div>
                         <picture>
-                            <source srcset="content/benefits-screenshot-b@2x.avif 2x, content/benefits-screenshot-b.avif" type="image/avif"/>
-                            <source srcset="content/benefits-screenshot-b@2x.webp 2x, content/benefits-screenshot-b.webp" type="image/webp"/>
+                            <source srcset="content/benefits-screenshot-b@2x.avif 2x, content/benefits-screenshot-b.avif" type="image/avif">
+                            <source srcset="content/benefits-screenshot-b@2x.webp 2x, content/benefits-screenshot-b.webp" type="image/webp">
                             <img class="benefits__screenshot" srcset="content/benefits-screenshot-b@2x.png 2x" src="content/benefits-screenshot-b.png" width="622" height="466" alt="">
                         </picture>
                     </div>
@@ -578,13 +578,16 @@
                         <p>Quotalogic Proposals also can serve as a company website, a public price list or as a quick-set configurable quote for a customer with adoptive product description and sales tools (chat, online payment, invoicing etc).</p>
                     </div>
                     <div class="basics__meaning-preview">
-                        <img class="basics__illustration"
-                             srcset="content/feature-meaning@2x.jpg 2x"
-                             src="content/feature-meaning.jpg"
-                             width="494"
-                             height="391"
-                             alt=""
-                        >
+                        <picture>
+                            <source srcset="content/feature-meaning@2x.avif 2x, content/feature-meaning.avif" type="image/avif">
+                            <img class="basics__illustration"
+                                 srcset="content/feature-meaning@2x.jpg 2x"
+                                 src="content/feature-meaning.jpg"
+                                 width="494"
+                                 height="391"
+                                 alt=""
+                            >
+                        </picture>
                     </div>
                 </div>
                 <div class="basics__tile basics__tile--integrations">
