--- a/src/index.html
+++ b/src/index.html
@@ -175,13 +175,16 @@
                 Smart product sets&nbsp;sharing
             </h2>
             <div class="sharing__body">
-                <img class="sharing__illustration animation animation--fade"
-                     srcset="content/sharing@2x.jpg"
-                     src="content/sharing.jpg"
-                     width="513"
-                     height="342"
-                     alt=""
-                >
+                <picture>
+                    <source srcset="content/sharing@2x.avif 2x, content/sharing.avif" type="image/avif">
+                    <img class="sharing__illustration animation animation--fade"
+                         srcset="content/sharing@2x.jpg"
+                         src="content/sharing.jpg"
+                         width="513"
+                         height="342"
+                         alt=""
+                    >
+                </picture>
                 <div class="sharing__description wysiwyg">
                     <p>
                         Forget about files and data parsing.<br>
