--- a/src/index.html
+++ b/src/index.html
@@ -128,13 +128,16 @@
             <div class="start__body">
                 <div class="start__item">
                     <div class="start__preview">
-                        <img class="start__illustration animation animation--fade animation--order-1"
-                             srcset="content/start-a@2x.jpg 2x"
-                             src="content/start-a.jpg"
-                             width="300"
-                             height="240"
-                             alt=""
-                        >
+                        <picture>
+                            <source srcset="content/start-a@2x.avif, content/start-a.avif" type="image/avif">
+                            <img class="start__illustration animation animation--fade animation--order-1"
+                                 srcset="content/start-a@2x.jpg 2x"
+                                 src="content/start-a.jpg"
+                                 width="300"
+                                 height="240"
+                                 alt=""
+                            >
+                        </picture>
                     </div>
                     <div class="start__description">
                         Connect an existing data source, upload a file or create your own product set manually.
@@ -142,13 +145,16 @@
                 </div>
                 <div class="start__item">
                     <div class="start__preview">
-                        <img class="start__illustration animation animation--fade animation--order-2"
-                             srcset="content/start-b@2x.jpg 2x"
-                             src="content/start-b.jpg"
-                             width="300"
-                             height="240"
-                             alt=""
-                        >
+                        <picture>
+                            <source srcset="content/start-b@2x.avif, content/start-b.avif" type="image/avif">
+                            <img class="start__illustration animation animation--fade animation--order-2"
+                                 srcset="content/start-b@2x.jpg 2x"
+                                 src="content/start-b.jpg"
+                                 width="300"
+                                 height="240"
+                                 alt=""
+                            >
+                        </picture>
                     </div>
                     <div class="start__description">
                         Join a ready-to-use catalog of your supplier in one click. Forget the worries about data accuracy and currency.
@@ -156,13 +162,16 @@
                 </div>
                 <div class="start__item">
                     <div class="start__preview">
-                        <img class="start__illustration animation animation--fade animation--order-3"
-                             srcset="content/start-c@2x.jpg 2x"
-                             src="content/start-c.jpg"
-                             width="300"
-                             height="240"
-                             alt=""
-                        >
+                        <picture>
+                            <source srcset="content/start-c@2x.avif, content/start-c.avif" type="image/avif">
+                            <img class="start__illustration animation animation--fade animation--order-3"
+                                 srcset="content/start-c@2x.jpg 2x"
+                                 src="content/start-c.jpg"
+                                 width="300"
+                                 height="240"
+                                 alt=""
+                            >
+                        </picture>
                     </div>
                     <div class="start__description">
                         Tune product data with the built-in CMS. Receive data updates from any external source or use always actual supplier’s catalogs.
