--- a/src/index.html
+++ b/src/index.html
@@ -380,9 +380,18 @@
                     </div>
                     <div class="sales__preview">
                         <picture>
-                            <source srcset="content/sales-desktop@2x.avif 2x, content/sales-desktop.avif" type="image/avif">
-                            <source srcset="content/sales-desktop@2x.webp 2x, content/sales-desktop.webp" type="image/webp">
-                            <img class="sales__illustration" srcset="content/sales-desktop@2x.png 2x" src="content/sales-desktop.png" width="702" height="678" alt="">
+                            <source media="(max-width: 599px)" srcset="content/sales-smartphone@2x.avif 2x, content/sales-smartphone.avif" type="image/avif">
+                            <source media="(max-width: 599px)" srcset="content/sales-smartphone@2x.webp 2x, content/sales-smartphone.webp" type="image/webp">
+                            <source media="(max-width: 599px)" srcset="content/sales-smartphone@2x.png 2x, content/sales-smartphone.png">
+                            <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.avif 2x, content/sales-desktop.avif" type="image/avif">
+                            <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.webp 2x, content/sales-desktop.webp" type="image/webp">
+                            <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.png 2x, content/sales-desktop.png">
+                            <img class="sales__illustration"
+                                 src="content/sales-desktop.png"
+                                 width="702"
+                                 height="678"
+                                 alt=""
+                            >
                         </picture>
                     </div>
                 </div>
