--- a/src/index.html
+++ b/src/index.html
@@ -236,10 +236,12 @@
                 <div class="truth__body">
                     <div class="truth__preview">
                         <picture>
-                            <source srcset="content/truth@2x.avif 2x, content/truth.avif" type="image/avif">
+                            <source media="(max-width: 599px)" srcset="content/truth-smartphone@2x.avif 2x, content/truth-smartphone.avif" type="image/avif">
+                            <source media="(max-width: 599px)" srcset="content/truth-smartphone@2x.jpg 2x, content/truth-smartphone.jpg">
+                            <source media="(min-width: 600px)" srcset="content/truth-desktop@2x.avif 2x, content/truth-desktop.avif" type="image/avif">
+                            <source media="(min-width: 600px)" srcset="content/truth-desktop@2x.jpg 2x, content/truth-desktop.jpg">
                             <img class="truth__illustration"
-                                 srcset="content/truth@2x.jpg 2x"
-                                 src="content/truth.jpg"
+                                 src="content/truth-desktop.jpg"
                                  width="509"
                                  height="570"
                                  alt=""
