--- a/src/index.html
+++ b/src/index.html
@@ -474,8 +474,16 @@
                             </ul>
                         </div>
                         <picture>
-                            <source srcset="content/benefits-screenshot-a-desktop@2x.avif 2x, content/benefits-screenshot-a-desktop.avif" type="image/avif">
-                            <img class="benefits__screenshot" srcset="content/benefits-screenshot-a-desktop@2x.jpg 2x" src="content/benefits-screenshot-a-desktop.jpg" width="622" height="466" alt="">
+                            <source media="(max-width: 600px)" srcset="content/benefits-screenshot-a-smartphone@2x.avif 2x, content/benefits-screenshot-a-desktop.avif" type="image/avif">
+                            <source media="(max-width: 600px)" srcset="content/benefits-screenshot-a-smartphone@2x.jpg 2x, content/benefits-screenshot-a-desktop.jpg">
+                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-a-desktop@2x.avif 2x, content/benefits-screenshot-a-desktop.avif" type="image/avif">
+                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-a-desktop@2x.jpg 2x, content/benefits-screenshot-a-desktop.jpg">
+                            <img class="benefits__screenshot"
+                                 src="content/benefits-screenshot-a-desktop.jpg"
+                                 width="622"
+                                 height="466"
+                                 alt=""
+                            >
                         </picture>
                     </div>
                 </div>
@@ -492,9 +500,18 @@
                             </ul>
                         </div>
                         <picture>
-                            <source srcset="content/benefits-screenshot-b-desktop@2x.avif 2x, content/benefits-screenshot-b-desktop.avif" type="image/avif">
-                            <source srcset="content/benefits-screenshot-b-desktop@2x.webp 2x, content/benefits-screenshot-b-desktop.webp" type="image/webp">
-                            <img class="benefits__screenshot" srcset="content/benefits-screenshot-b-desktop@2x.png 2x" src="content/benefits-screenshot-b-desktop.png" width="622" height="466" alt="">
+                            <source media="(max-width: 599px)" srcset="content/benefits-screenshot-b-smartphone@2x.avif 2x, content/benefits-screenshot-b-desktop.avif" type="image/avif">
+                            <source media="(max-width: 599px)" srcset="content/benefits-screenshot-b-smartphone@2x.webp 2x, content/benefits-screenshot-b-desktop.webp" type="image/webp">
+                            <source media="(max-width: 599px)" srcset="content/benefits-screenshot-b-smartphone@2x.png 2x, content/benefits-screenshot-b-desktop.png">
+                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-b-desktop@2x.avif 2x, content/benefits-screenshot-b-desktop.avif" type="image/avif">
+                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-b-desktop@2x.webp 2x, content/benefits-screenshot-b-desktop.webp" type="image/webp">
+                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-b-desktop@2x.png 2x, content/benefits-screenshot-b-desktop.png">
+                            <img class="benefits__screenshot"
+                                 src="content/benefits-screenshot-b-desktop.png"
+                                 width="622"
+                                 height="466"
+                                 alt=""
+                            >
                         </picture>
                     </div>
                 </div>
