--- a/src/index.html
+++ b/src/index.html
@@ -613,12 +613,12 @@
             <div class="basics__lists">
                 <div class="basics__tile basics__tile--meaning">
                     <h3 class="basics__sub-heading">
-                        New meaning of Proposals
+                        Reimagining Proposals with Quotalogic
                     </h3>
                     <div class="basics__text wysiwyg wysiwyg--dense">
-                        <p>Quotalogic revolutionizes Proposals. We use them not only to display product data, but to share products themselves.</p>
-                        <p>Our Proposals are custom-designed web pages equipped with specific tools based on the template and use case. These pages serve as representative catalogs, promos or price-lists, from which the dealer can connect the offered products to his workspace just in 1 click and start to use them: combine products from many suppliers, share them with dealers or make quotes for customers.</p>
-                        <p>Quotalogic Proposals also can serve as a company website, a public price list or as a quick-set configurable quote for a customer with adoptive product description and sales tools (chat, online payment, invoicing etc).</p>
+                        <p>Quotalogic is revolutionizing the way we use proposals. They serve not just as vehicles for product information, but as the medium to share the products themselves.</p>
+                        <p>Each of our Proposals is a custom-designed web page, equipped with specific tools tailored to the template and use case. They act as representative catalogs, promos, or price lists. Dealers can connect the offered products to their workspace with just one click and start using them. They can combine products from multiple suppliers, share them with their network, or create quotes for customers.</p>
+                        <p>Moreover, Quotalogic Proposals can function as a company website, a public price list, or as a quick, customizable quote for a customer. They come with adaptive product descriptions and sales tools, such as chat, online payment, invoicing, and more.</p>
                     </div>
                     <div class="basics__meaning-preview">
                         <picture>
@@ -635,18 +635,18 @@
                 </div>
                 <div class="basics__tile basics__tile--integrations">
                     <h3 class="basics__sub-heading">
-                        In and Out integrations
+                        Integrations In and Out
                     </h3>
                     <div class="basics__text wysiwyg">
-                        <p>We handle data synchronization and integrations. You can create a catalogue that draws data from any external source via API or a file. Simultaneously, you can made the export of any data collected in Quotalogic to your website, CMS or marketplace.</p>
+                        <p>Quotalogic handles data synchronization and integrations. You can create a catalog that pulls data from any external source, whether it's via a feed, API, or a file. Simultaneously, you can export any data collected in Quotalogic to your website, CMS, or marketplace.</p>
                     </div>
                 </div>
                 <div class="basics__tile basics__tile--data-model">
                     <h3 class="basics__sub-heading">
-                        Dynamically constructed<br class="desktop-only"> product data model
+                        Dynamically Constructed<br class="desktop-only"> Product Data Model
                     </h3>
                     <div class="basics__text wysiwyg">
-                        <p>Product characteristics can be set through dependence (by formulas) on other values or on external factors. As simple as using a spreadsheet, but tailored for sales tasks</p>
+                        <p>Product characteristics can be determined by dependencies (using formulas) on other values or external factors. It's as easy as using a spreadsheet, but specifically tailored for sales tasks.</p>
                     </div>
                 </div>
                 <div class="basics__tile basics__tile--omnichanelling">
@@ -655,8 +655,8 @@
                     </h3>
                     <div class="basics__text wysiwyg">
                         <p>Distributors can customize and share different product properties with various dealer groups.</p>
-                        <p>Dealers can further override and extend these characteristics before resharing with partners.</p>
-                        <p>This way, the product core stays consistent while each seller in a chain sees an unique product version.</p>
+                        <p>Dealers, in turn, can override and extend these characteristics before resharing them with partners.</p>
+                        <p>This way, the core of the product remains consistent, while each seller in the chain sees a unique version of the product.</p>
                     </div>
                     <video class="basics__omnichanelling-video" autoplay muted playsinline loop>
                         <source src="content/basics-omnichanelling.webm" type="video/webm">
@@ -665,19 +665,19 @@
                 </div>
                 <div class="basics__tile basics__tile--dealer-network">
                     <h3 class="basics__sub-heading">
-                        One virtual product for the whole<br class="desktop-only"> dealer network
+                        A Single Virtual Product for the Entire Dealer Network
                     </h3>
                     <div class="basics__text wysiwyg">
-                        <p>Since the entire network uses one shared foundational product object, when a change occurs in the product details, it's immediately reflected throughout the entire dealer network.</p>
-                        <p>While extended product characteristics are automatically calculated using dynamic formulas, the product always remain up-to-date and require no manual management.</p>
+                        <p>With every dealer in the network using a single, shared foundational product object, any changes to product details are instantly reflected across the network.</p>
+                        <p>Thanks to dynamic formulas that automatically calculate extended product characteristics, your product information always remains up-to-date, requiring no manual management.</p>
                     </div>
                 </div>
                 <div class="basics__tile basics__tile--user-data">
                     <h3 class="basics__sub-heading">
-                        Protected user data
+                        Secured User Data
                     </h3>
                     <div class="basics__text wysiwyg">
-                        <p>If needed, the seller can change or break the dependence of the product data on the supplier. Any changes will continue to flow to him as updates, which he can easily accept, reject or combine with his current data</p>
+                        <p>If required, sellers can alter or disconnect the dependency of product data on the supplier. Any updates or changes will continue to be forwarded to the seller, who can easily choose to accept, reject or merge them with their current data.</p>
                     </div>
                 </div>
                 <div class="basics__tile basics__tile--quoting">
@@ -685,12 +685,12 @@
                         Smart quoting
                     </h3>
                     <div class="basics__text wysiwyg">
-                        <p>When compiling a quote the system suggests the specific products and prices based on the supplier’ recommendations, as well as on machine learning and analysis of other quotes with similar product combinations used in a dealer network.</p>
+                        <p>While compiling a quote, the system recommends specific products and pricing, drawing on supplier guidance, machine learning, and an analysis of similar product combinations used within the dealer network.</p>
                     </div>
                 </div>
             </div>
             <div class="basics__footer">
-                With an innovative approach to data management we create an effective full-fledged workplace for b2b and b2c sales with the toolset of PIM, quoting and price management corresponding to our focus customers group.
+                With an innovative approach to data management, we create a comprehensive workspace for both B2B and B2C sales, equipped with PIM, quoting, and price management tools, tailored specifically to the needs of distributors and dealers.
             </div>
         </section>
         <section class="about">
