tariffs text and fonts

--- a/src/index.html
+++ b/src/index.html
@@ -773,7 +773,7 @@
                                     14 days free
                                 </div>
                                 <div class="plan__note">
-                                    Unlimited products, up to 10 owned catalogs and full analytics of your sales
+                                    Unlimited products and up to 10 owned catalogs. Full analytics of your sales are included.
                                 </div>
                             </div>
                         </th>
@@ -789,7 +789,7 @@
                                     14 days free
                                 </div>
                                 <div class="plan__note">
-                                    Unlimited catalogs, advertising, dealer network and market analytics
+                                    Unlimited catalogs and advertising. Access to dealer network and market analytics.
                                 </div>
                             </div>
                         </th>
