--- a/src/index.html
+++ b/src/index.html
@@ -706,7 +706,7 @@
                             One-click access
                         </h3>
                         <div class="about__description wysiwyg">
-                            <p>We are speeding up the start-up phase and sales process by enabling one-click access for suppliers products and sales tools</p>
+                            <p>We speed up the startup phase and sales process by providing one-click access to suppliers' products and sales tools</p>
                         </div>
                     </div>
                     <div class="about__section">
@@ -714,8 +714,8 @@
                             Big data analysis
                         </h3>
                         <div class="about__description wysiwyg">
-                            <p>Examining of product behavior in the dealer network allows the distributor to fully understand product proposition effectiveness and quickly respond to market behavior in real time.</p>
-                            <p>Timely proposition analysis reduce inventory costs by minimizing stock-outs and overstocks.</p>
+                            <p>By examining product behavior within the dealer network, distributors can fully understand the effectiveness of product propositions and respond quickly to market changes in real time.</p>
+                            <p>Timely proposition analysis reduces inventory costs by minimizing both stock-outs and overstocks.</p>
                         </div>
                     </div>
                     <div class="about__section">
@@ -723,7 +723,7 @@
                             AI-driven sales
                         </h3>
                         <div class="about__description wysiwyg">
-                            <p>Machine learning algorithms help distributors reach optimal pricing and promotion strategies, create product descriptions according to the context and purpose of the offer and generate offers based on customer requests.</p>
+                            <p>Machine learning algorithms assist distributors in achieving optimal pricing and promotional strategies, creating product descriptions tailored to the context and purpose of the offer, and generating offers based on customer requests.</p>
                         </div>
                     </div>
                     <div class="about__section">
@@ -731,7 +731,7 @@
                             Efficiency of seller
                         </h3>
                         <div class="about__description wysiwyg">
-                            <p>We assign product info management, price tuning, and sales management tasks based on the roles of each seller in a dealer network. This eliminates duplication of work and reduces the workload of each seller by three times</p>
+                            <p>We assign tasks related to product info management, price tuning, and sales management according to the roles of each seller within the dealer network. This approach eliminates duplication of work and can reduce the workload of each seller by up to three times.</p>
                         </div>
                     </div>
                 </div>
