--- a/src/index.html
+++ b/src/index.html
@@ -622,10 +622,10 @@
                     </div>
                     <div class="basics__meaning-preview">
                         <picture>
-                            <source srcset="content/feature-meaning@2x.avif 2x, content/feature-meaning.avif" type="image/avif">
+                            <source srcset="content/basics-meaning@2x.avif 2x, content/basics-meaning.avif" type="image/avif">
                             <img class="basics__illustration"
-                                 srcset="content/feature-meaning@2x.jpg 2x"
-                                 src="content/feature-meaning.jpg"
+                                 srcset="content/basics-meaning@2x.jpg 2x"
+                                 src="content/basics-meaning.jpg"
                                  width="494"
                                  height="391"
                                  alt=""
