--- a/src/index.html
+++ b/src/index.html
@@ -620,14 +620,14 @@
                         <p>Each of our Proposals is a custom-designed web page, equipped with specific tools tailored to the template and use case. They act as representative catalogs, promos, or price lists. Dealers can connect the offered products to their workspace with just one click and start using them. They can combine products from multiple suppliers, share them with their network, or create quotes for customers.</p>
                         <p>Moreover, Quotalogic Proposals can function as a company website, a public price list, or as a quick, customizable quote for a customer. They come with adaptive product descriptions and sales tools, such as chat, online payment, invoicing, and more.</p>
                     </div>
-                    <div class="basics__meaning-preview">
+                    <div class="basics__preview">
                         <picture>
                             <source srcset="content/basics-meaning@2x.avif 2x, content/basics-meaning.avif" type="image/avif">
                             <img class="basics__illustration"
                                  srcset="content/basics-meaning@2x.jpg 2x"
                                  src="content/basics-meaning.jpg"
-                                 width="494"
-                                 height="391"
+                                 width="704"
+                                 height="352"
                                  alt=""
                             >
                         </picture>
@@ -639,6 +639,18 @@
                     </h3>
                     <div class="basics__text wysiwyg">
                         <p>Quotalogic handles data synchronization and integrations. You can create a catalog that pulls data from any external source, whether it's via a feed, API, or a file. Simultaneously, you can export any data collected in Quotalogic to your website, CMS, or marketplace.</p>
+                    </div>
+                    <div class="basics__preview">
+                        <picture>
+                            <source srcset="content/basics-integrations@2x.avif 2x, content/basics-integrations.avif" type="image/avif">
+                            <img class="basics__illustration"
+                                 srcset="content/basics-integrations@2x.jpg 2x"
+                                 src="content/basics-integrations.jpg"
+                                 width="435"
+                                 height="337"
+                                 alt=""
+                            >
+                        </picture>
                     </div>
                 </div>
                 <div class="basics__tile basics__tile--data-model">
