clean up basics

--- a/src/index.html
+++ b/src/index.html
@@ -608,7 +608,7 @@
                 Our basics
             </h2>
             <div class="basics__description">
-                Quotalogic redefines how we approach products. In our vision, every physical product should have one virtual counterpart accessible to the entire dealer network, rather than millions of data copies for each seller.
+                Quotalogic is redefining the way we approach products. We believe that every physical product should have a single virtual counterpart, accessible to the entire dealer network, rather than millions of data copies for each seller.
             </div>
             <div class="basics__lists">
                 <div class="basics__tile basics__tile--meaning">
