--- a/src/index.html
+++ b/src/index.html
@@ -549,7 +549,7 @@
             </div>
             <div class="numbers__data">
                 <h3 class="numbers__sub-heading title">
-                    More cool<br class="smartphone-only"> numbers
+                    More cool <br class="smartphone-only"> stats
                 </h3>
                 <div class="numbers__list">
                     <div class="numbers__item">
