--- a/src/index.html
+++ b/src/index.html
@@ -670,10 +670,12 @@
                         <p>Dealers, in turn, can override and extend these characteristics before resharing them with partners.</p>
                         <p>This way, the core of the product remains consistent, while each seller in the chain sees a unique version of the product.</p>
                     </div>
-                    <video class="basics__omnichanelling-video" autoplay muted playsinline loop>
-                        <source src="content/basics-omnichanelling.webm" type="video/webm">
-                        <source src="content/basics-omnichanelling.mp4" type="video/mp4">
-                    </video>
+                    <div class="basics__preview">
+                        <video class="basics__video" autoplay muted playsinline loop>
+                            <source src="content/basics-omnichanelling.webm" type="video/webm">
+                            <source src="content/basics-omnichanelling.mp4" type="video/mp4">
+                        </video>
+                    </div>
                 </div>
                 <div class="basics__tile basics__tile--dealer-network">
                     <h3 class="basics__sub-heading">
